--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+server.port=8080
+spring.sql.init.mode=always
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.sql.init.data-locations=classpath:schema.sql
+#spring.jpa.defer-datasource-initialization=true
 
+spring.jpa.hibernate.ddl-auto=none
+
+
+spring.datasource.username=postgres
+spring.datasource.password=qwerty
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
