--- a/src/test/resources/application-integrationtest.properties
+++ b/src/test/resources/application-integrationtest.properties
@@ -1,6 +1,6 @@
 server.port=8080
 spring.sql.init.mode=always
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
 #spring.sql.init.data-locations=classpath:schema.sql
 #spring.jpa.defer-datasource-initialization=true
 
@@ -10,5 +10,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.username=postgres
 spring.datasource.password=qwerty
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database=postgresql
+spring.jpa.database=testdb
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
